# proposal-prompt-studio

./: README.md  index.html  package-lock.json  package.json  tsconfig.json
database/: .gitignore  schema.sql  seed.sql
docs/: HANDOFF_001_SQLITE_MODEL.md  HANDOFF_002_APP_STRUCTURE_SERVICES.md  HANDOFF_003_PROPOSAL_WORKFLOW.md  HANDOFF_004_PROMPT_GENERATION.md  HANDOFF_005_PROMPT_EXPORT.md  HANDOFF_006_FINAL_DOCUMENTS.md  HANDOFF_007_FILE_PICKER_OPEN_PATHS.md  HANDOFF_008_FINAL_DOCUMENT_MANAGEMENT.md  HANDOFF_009_DUPLICATE_PROPOSAL.md  HANDOFF_010B_BRAND_VALIDATION_OUTPUT_MODE.md  HANDOFF_010_EDIT_PROPOSALS_ITEMS.md
scripts/: test-services.ts  validate-sqlite.py
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  final_document_commands.rs  folder_service.rs  lib.rs  main.rs  models.rs  prompt_commands.rs  prompt_export_commands.rs  proposal_commands.rs
src/services/: brandService.ts  dashboardService.ts  fileDialogService.ts  finalDocumentService.ts  folderService.ts  layoutService.ts  lineTotalService.ts  previewData.ts  priceCalculationService.ts  pricingRuleService.ts  promptExportService.ts  promptGenerationService.ts  promptRunService.ts  proposalItemService.ts  proposalNumberService.ts  proposalService.ts  settingsService.ts  tauriClient.ts
src/types/: index.ts
src/ui/: App.tsx
