[package]
name = "proposal-prompt-studio"
version = "0.2.0"
description = "Local-first proposal prompt preparation app"
authors = ["Proposal Prompt Studio"]
edition = "2021"

[lib]
name = "proposal_prompt_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-opener = "2.5.4"
thiserror = "2"
